<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="reactiva.reactivamovil.VerTerapia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/header1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorRosado"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            >

            <ImageView
                android:id="@+id/quickContactBadge"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@mipmap/profile_f"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.086" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:text="@string/hour_1"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.034"
                app:layout_constraintLeft_toRightOf="@+id/quickContactBadge"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.263" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:text="@string/section_1"
                android:textSize="28sp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.034"
                app:layout_constraintLeft_toRightOf="@+id/quickContactBadge"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.588" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/section1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:background="@color/colorRosado"
            >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hour_1"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/quickContactBadge4"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/profile_f" />

            <ImageView
            android:id="@+id/quickContactBadge8"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="500dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/stop"
                android:layout_marginStart="500dp" />

            <ImageView
                android:id="@+id/quickContactBadge9"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginTop="130dp"
                android:layout_marginLeft="500dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/pause"
                android:layout_marginStart="500dp" />

            <ImageView
                android:id="@+id/quickContactBadge10"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginTop="210dp"
                android:layout_marginLeft="500dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/comment"
                android:layout_marginStart="500dp" />

            <ImageView
                android:id="@+id/quickContactBadge11"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginTop="290dp"
                android:layout_marginLeft="500dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/gallery"
                android:layout_marginStart="500dp" />

            <ImageView
                android:id="@+id/quickContactBadge12"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/view_therapy"
                android:layout_marginStart="25dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="240dp"
                android:text="@string/section_1"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="268dp"
                android:text="@string/item_12"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="293dp"
                android:text="@string/item_13"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05" />

            <ImageView
                android:id="@+id/quickContactBadge5"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginTop="313dp"
                android:layout_marginLeft="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/cuerpo_brazo_der"
                android:layout_marginStart="150dp" />

            <ImageView
                android:id="@+id/quickContactBadge6"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginTop="313dp"
                android:layout_marginLeft="250dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/cuerpo_columna"
                android:layout_marginStart="250dp" />

            <ImageView
                android:id="@+id/quickContactBadge7"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginTop="313dp"
                android:layout_marginLeft="350dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/cuerpo_brazo_izq"
                android:layout_marginStart="350dp" />
        </android.support.constraint.ConstraintLayout>
    <!--SECCION 2-->

        <android.support.constraint.ConstraintLayout
        android:id="@+id/header2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorMoradoClaro"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        >

        <ImageView
            android:id="@+id/quickContactBadge13"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@mipmap/profile_f"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.086" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:text="@string/hour_2"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.034"
            app:layout_constraintLeft_toRightOf="@+id/quickContactBadge13"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.263" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:text="@string/section_2"
            android:textSize="28sp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.034"
            app:layout_constraintLeft_toRightOf="@+id/quickContactBadge13"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.588" />
    </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/section2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:background="@color/colorMoradoClaro"
            ></android.support.constraint.ConstraintLayout>
    <!--Seccion 3-->

        <android.support.constraint.ConstraintLayout
            android:id="@+id/header3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorMoradoMedio"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            >

            <ImageView
                android:id="@+id/quickContactBadge14"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@mipmap/profile_f"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.086" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:text="@string/hour_3"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.034"
                app:layout_constraintLeft_toRightOf="@+id/quickContactBadge14"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.263" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:text="@string/section_3"
                android:textSize="28sp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.034"
                app:layout_constraintLeft_toRightOf="@+id/quickContactBadge14"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.588" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/section3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:background="@color/colorMoradoMedio"
            ></android.support.constraint.ConstraintLayout>
    </LinearLayout>
</ScrollView>

